--- a/src/app/item/item-description/item-description.component.html
+++ b/src/app/item/item-description/item-description.component.html
@@ -23,7 +23,7 @@
             </div>
             <div *ngIf="data.showCost">
                 <br>
-                Value in Silver: {{data.item.cost}} (each)
+                Value in Gold: {{data.item.cost}} (each)
             </div>
         </mat-card-content>
     </mat-card>
