--- a/src/app/item/item-table/item-table.component.html
+++ b/src/app/item/item-table/item-table.component.html
@@ -52,7 +52,7 @@
         </ng-container>
 
         <ng-container matColumnDef="cost">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Value in SP</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Value in GP</th>
             <td mat-cell *matCellDef="let element">
                 <div (click)="openItemDescription(element)">
                     <div *ngIf="element.cost != null">
