--- a/src/app/item/item-transaction-modal/item-transaction-modal.component.html
+++ b/src/app/item/item-transaction-modal/item-transaction-modal.component.html
@@ -76,7 +76,7 @@
                         numeric 
                         type="number"
                         formControlName="cost" 
-                        placeholder="Enter Cost Of Item In Silver">
+                        placeholder="Enter Cost Of Item In Gold">
                     </mat-form-field><br>
                 </div>
 
