--- a/src/app/coin/money/money.component.html
+++ b/src/app/coin/money/money.component.html
@@ -6,6 +6,9 @@
                 <img src="../../../assets/platinum.png" class="moneyIcon">
                 Platinum:
                 {{ currencyTransaction?.platinumTotal | number }} &nbsp;&nbsp;
+                <img src="../../../assets/gold.png" class="moneyIcon">
+                Gold: 
+                {{ currencyTransaction?.goldTotal | number }} &nbsp;&nbsp;
                 <img src="../../../assets/electrum.png" class="moneyIcon">
                 Electrum:
                 {{ currencyTransaction?.electrumTotal | number }} &nbsp;&nbsp;
@@ -15,14 +18,11 @@
                 <img src="../../../assets/copper.png" class="moneyIcon">
                 Copper: 
                 {{ currencyTransaction?.copperTotal | number }} &nbsp;&nbsp;
-                <img src="../../../assets/gold.png" class="moneyIcon">
-                Gold: 
-                {{ currencyTransaction?.goldTotal | number }} &nbsp;&nbsp;
                 <br>
                 <span class="br"></span>
-                Total Value in Silver: 
-                <img src="../../../assets/silver.png" class="moneyIcon">
-                {{ currencyTransaction?.totalValueInSilver | number:'1.2-2' }}
+                Total Value in Gold: 
+                <img src="../../../assets/gold.png" class="moneyIcon">
+                {{ currencyTransaction?.totalValueInStandard | number:'1.2-2' }}
             </div>
         </mat-tab>
     </mat-tab-group>
